<resources>
    <string name="app_name">Rick And Morty</string>

    <!--Character's string-->
    <string name="character_name">Character name</string>
    <string name="character_status">Status</string>
    <string name="character_race">Race</string>
    <string name="character_gender">Gender</string>
    <string name="character_origin">Origin</string>

    <!--Episode's string-->
    <string name="episode_title">Episode title</string>
    <string name="episode_characters_count">0</string>
    <string name="season">Season:</string>
    <string name="episode">Episode:</string>
    <string name="episode_number">0</string>
    <string name="air_date">Air-Date</string>

    <!--Location's string-->
    <string name="type_of_location">Type of location</string>
    <string name="dimension">Dimension:</string>
    <string name="location_title">Title</string>
    <string name="residents_count">0</string>
    <string name="link">Link</string>
    <string name="current_location">Current Location</string>

    <!--Bottom Navigation View-->
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="settings">Settings</string>

    <!--Preference key-->
    <string name="night_mode_key">night_mode_key</string>

    <!--Preference string-->
    <string name="night_mode">Night mode</string>

    <!--Error string-->
    <string name="restart">Restart</string>
    <string name="network_error">Network error</string>
</resources>