<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16"
        app:cardCornerRadius="@dimen/cardView_corner_radius">

        <ImageView
            android:id="@+id/character_imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/character_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/character_name"
        android:textSize="@dimen/text_size_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/characterStatus_imageView"
            android:layout_width="@dimen/character_statusImage_width"
            android:layout_height="@dimen/character_statusImage_height"
            android:src="@drawable/ic_status_alive" />

        <TextView
            android:id="@+id/character_status_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/character_status"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/character_race_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/character_race"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/character_gender_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/character_gender"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/character_origin"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/character_origin_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_8"
        android:text="@string/link"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/current_location"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/character_current_location_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_8"
        android:text="@string/link"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18" />


</LinearLayout>