<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.ui.activity.CharacterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:cardCornerRadius="16dp">

        <ImageView
            android:id="@+id/character_imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/characterName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/character_name"
        android:textColor="@color/black"
        android:textSize="@dimen/large_textSize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/characterStatus_imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_status_alive" />

        <TextView
            android:id="@+id/characterStatus_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/character_status"
            android:textColor="@color/black"
            android:textSize="@dimen/small_textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/characterRace_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/character_race"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_textSize" />

        <TextView
            android:id="@+id/character_gender_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/character_gender"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_textSize" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/character_origin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_textSize" />

    <TextView
        android:id="@+id/characterOrigin_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/link"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/medium_textSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/current_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_textSize" />

    <TextView
        android:id="@+id/characterCurrentLocation_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/link"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/medium_textSize" />


</LinearLayout>