<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.EpisodeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">

            <TextView
                android:id="@+id/episodeTitle_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:text="@string/episode_title"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/large_textSize" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/season"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_textSize" />

                <ImageView
                    android:id="@+id/episodeSeasonNumb_imageView"
                    android:layout_width="@dimen/item_episodeSeasonNumbImage_width"
                    android:layout_height="@dimen/item_episodeSeasonNumbImage_height"
                    android:layout_marginStart="@dimen/small_margin"
                    android:src="@drawable/ic_first_season_black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/medium_margin"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/episode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_textSize" />

                <TextView
                    android:id="@+id/episode_number_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/episode_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_textSize" />

            </LinearLayout>

            <TextView
                android:id="@+id/episode_airDate_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/medium_margin"
                android:text="@string/air_date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_textSize" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>