<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_64"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16">


        <ImageView
            android:id="@+id/location_imageView"
            android:layout_width="@dimen/item_location_type_image_width"
            android:layout_height="@dimen/item_location_type_image_height"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_location_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/location_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_imageView" />

        <TextView
            android:id="@+id/location_type_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/type_of_location"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_title_textView" />

        <TextView
            android:id="@+id/location_dimension_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center"
            android:text="@string/dimension"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_type_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>